# parsio

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
bindings/: pyproject.toml  setup.py  test_tokenizer.py
bindings/src/parsio/: __init__.py  tokenizer.py
core/: Cargo.toml
core/src/: lib.rs
core/src/modules/: tokenizer.rs
core/tests/: tokenizer_tests.rs
